--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
           <i class="fas fa-redo"></i>
         </div>
         <div class="btn btn-prev">
-          <i class="fas fa-step-backward"></i>
+            <i class="fas fa-step-backward"></i>
+        </div>
+        <div class="btn btn-backward">
+            <i class="fas fa-backward"></i>
         </div>
         <div class="btn btn-toggle-play">
-          <i class="fas fa-pause icon-pause"></i>
-          <i class="fas fa-play icon-play"></i>
+            <i class="fas fa-pause icon-pause"></i>
+            <i class="fas fa-play icon-play"></i>
+        </div>
+        <div class="btn btn-forward">
+            <i class="fas fa-forward"></i>
         </div>
         <div class="btn btn-next">
           <i class="fas fa-step-forward"></i>
